<?xml version="1.0"?>
<package format="2">
  <name>abb_irbt4004_support</name>
  <version>0.0.1</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRBT 4004 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRBT 4004 trackmotion.
    </p>
    <p>
      Joint limits and max joint velocities to be documented.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Atle Aalerud</author>
  <maintainer email="atle.aalerud@uia.no">Atle Aalerud (University of Agder, Norway)</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.9.55">roslaunch</build_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
